@@ -1,9 +1,10 @@
 Package: OpenML
 Title: Exploring Machine Learning Better, Together
-Description: OpenML.org is an online machine learning platform where researchers can automatically
-    share data, code, and experiments, and organize them online to work and collaborate more effectively.
-    We provide a R interface to the OpenML API in order to download and upload data sets,
-    tasks, flows and runs, see http://www.openml.org/guide for more information.
+Description: 'OpenML.org' is an online machine learning platform where researchers can 
+    automatically share data, machine learning tasks and experiments and organize them 
+    online to work and collaborate more effectively.
+    We provide a R interface to the OpenML REST API in order to download and upload data 
+    sets, tasks, flows and runs, see <http://www.openml.org/guide> for more information.
 Author: Giuseppe Casalicchio <giuseppe.casalicchio@stat.uni-muenchen.de>,
     Bernd Bischl <bernd_bischl@gmx.net>,
     Dominik Kirchhoff <dom.kirchhoff@gmail.com>,
@@ -24,10 +25,10 @@ Imports: backports (>= 1.0.3), BBmisc (>= 1.10), checkmate (>= 1.8.1),
         jsonlite, memoise (>= 1.0.0), stats, curl
 LazyData: yes
 ByteCompile: yes
-Version: 1.0
+Version: 1.1
 RoxygenNote: 5.0.1
 VignetteBuilder: R.rsp
 NeedsCompilation: no
-Packaged: 2016-11-12 16:32:42 UTC; Admin2
+Packaged: 2016-11-23 09:41:57 UTC; Admin2
 Repository: CRAN
-Date/Publication: 2016-11-12 19:54:45
+Date/Publication: 2016-11-23 12:06:34
