@@ -1,7 +1,7 @@
-4b5a363612255e7c7d592fbb080d3b98 *DESCRIPTION
+040cb1093794038c0205c6b489400113 *DESCRIPTION
 42114c6a0fa730db2631809c07d7a972 *LICENSE
-72d54720c75dc8e6388e55d5e621dc93 *NAMESPACE
-3b6d0e2bfda81a4809e23a7177a35466 *NEWS
+a44a974eab5403e2d3f9fee148b9df6d *NAMESPACE
+6b0d0ba45fde87b7830a5dabf0f2241b *NEWS
 2ea8a0148d44c66ed24eb2010e339e7c *R/OMLDataSetDescription_Class.R
 b5565cba261df93b5da161e59c2297db *R/OMLDataSet_Class.R
 6ce2d04bf45ac93f18dc1ef68b3a0513 *R/OMLEstimationProcedure_Class.R
@@ -18,10 +18,10 @@ ae9582682156aca482a88f71e2502106 *R/cache.R
 4f6873aaee6f5ef81282f88df15f6857 *R/convertMlrLearnerToOMLFlow.R
 d7c4a9587ead60f4b559cff6ae99c6f6 *R/convertMlrTaskToOMLDataSet.R
 684b6bbed62e536bac7c45df63ccaf6e *R/convertOMLDataSetToMlr.R
-c67398b14c7fd37b986aee8db27e37eb *R/convertOMLFlowToMlr.R
+d369aa51f03b5be72ec5a8ffe88b77c0 *R/convertOMLFlowToMlr.R
 5b2c182d492024a3cdf98ad9d290c008 *R/convertOMLMeasuresToMlr.R
 8a25e3a24cbd05c0e0f551acbd2d4a84 *R/convertOMLMlrRunToBMR.R
-6eccad294360abeea86bf4b7d70ea10a *R/convertOMLRunToBMR.R
+d81c79cde9cb842b324a366bd3306576 *R/convertOMLRunToBMR.R
 2147242d1c71f2111ea329fe58eba060 *R/convertOMLSplitsToMlr.R
 34156c375db59f0cd9d7e856ba5e974c *R/convertOMLTaskToMlr.R
 892212cc32e07d8d0d92e025a93140d1 *R/deleteOMLObject.R
@@ -30,8 +30,8 @@ c67398b14c7fd37b986aee8db27e37eb *R/convertOMLFlowToMlr.R
 e2c737ad67db1e945a1fc5f228eeb182 *R/getCachedOMLDataSetStatus.R
 d167623dd1e5a472a97690845efd3d31 *R/getOMLConfig.R
 4a9e236373a2806a7f650f02fd158009 *R/getOMLDataSet.R
-4b298b6b0d318328e633c753abf66861 *R/getOMLDataSetQualities.R
-f4d82f282145f53863bf4c6d375ac7d0 *R/getOMLFlow.R
+e709b80cd1cde9282571c37ca6c3c9c8 *R/getOMLDataSetQualities.R
+470d1f57319dea209585e92a79c030db *R/getOMLFlow.R
 28199c193af070442d3684c14bd4a651 *R/getOMLRun.R
 d810c70d02a468e4c2bee2d2d75dba3d *R/getOMLTask.R
 9eef06f43a96265dabf9733c8b99b095 *R/helper_misc.R
@@ -44,11 +44,11 @@ f9ca3b5eecba6c6fd3277a153d483d43 *R/listOMLEvaluationMeasures.R
 ef5dd04dd8bb971cf21047dae8a7a1fe *R/listOMLRunEvaluations.R
 9240559c5b148a03d5309994c9f4a2c5 *R/listOMLRuns.R
 f0938e5e43ea396ce139f1101a75b258 *R/listOMLTaskTypes.R
-f75a305dad62355d3207efc19641dd38 *R/listOMLTasks.R
+4eca1726bfb7b1d74fdc1fef3cabe552 *R/listOMLTasks.R
 bd2c7c2403275e7ef4d53e611c8516be *R/loadOMLConfig.R
 890bb13c397080bd31b30281c4fd7623 *R/populateOMLCache.R
 5c5b5ad210e4b2e4c34ed8f02696baad *R/reformatPredictions.R
-fa655849bea445e32ee50b07a5c8df6b *R/runTaskFlow.R
+8f868e19589a86f70bf50765b47d7230 *R/runTaskFlow.R
 af86b1f89ab64bad035b6161a2d0270a *R/runTaskMlr.R
 a95f4d1b4ee4c451c5b65530be0d9056 *R/saveOMLConfig.R
 4276ddcb91285974eb37955913bb4fca *R/setOMLConfig.R
@@ -60,9 +60,9 @@ d0249c92d692a994382f6fe782b43b09 *R/writeOMLDataSetXML.R
 415a49f02243b5d82f69e1c17c7c7d18 *R/writeOMLFlowXML.R
 37e41687b8bc73a80accc110d20179f5 *R/writeOMLRunXML.R
 1cd7ae635474bf583898ac7b3cf6ea52 *R/xml_helpers.R
-82f6e4a2b8d9f3743da69a862ad4c6c9 *R/zzz.R
+7da89f0990a7be612f853d5203183b67 *R/zzz.R
 e18fe78943b40c9f1cda735548df6e0d *build/vignette.rds
-2d2e61954067c009685adfb41fe97e38 *inst/doc/OpenML.pdf
+977a8d9250831f4014b6a75bc41c1f0b *inst/doc/OpenML.pdf
 377a78c03960e43d0581577d586a83b0 *inst/doc/OpenML.pdf.asis
 e62e59cf9810ae90f2a7bf7691a4b5f2 *inst/examples/clearOMLCache.R
 997a5bd1a18ca4da61221aa3c8a53d4b *inst/examples/convertOMLDataSetToMlr.R
@@ -96,7 +96,7 @@ fd86ea2cf4c6f7669bddef5cbd4b3737 *man/OMLDataSetDescription.Rd
 21603d760f3a6c0ed1570205edea68b0 *man/convertOMLDataSetToMlr.Rd
 f40bd9727d49aa469a290f878aaca145 *man/convertOMLFlowToMlr.Rd
 f221d021c3cb12b062650f81a08c027e *man/convertOMLMlrRunToBMR.Rd
-22f397640fa4f25f9deacfcf39842e7c *man/convertOMLRunToBMR.Rd
+e2dcec2080e212ae2fd8f63e0f76ae7e *man/convertOMLRunToBMR.Rd
 ac2010c92b761327371ee3184b537a2f *man/convertOMLTaskToMlr.Rd
 dc4706c83e1d6949d82fe26b74eb7b0e *man/deleteOMLObject.Rd
 93e389f0e0c9196b7116c3b8eb640de1 *man/doAPICall.Rd
