@@ -75,6 +75,7 @@ import(checkmate)
 import(curl)
 import(data.table)
 import(jsonlite)
+import(mlr)
 import(stringi)
 importFrom(digest,digest)
 importFrom(httr,DELETE)
