@@ -12,9 +12,9 @@
 #' @export
 convertOMLFlowToMlr = function(flow) {
   assertClass(flow, "OMLFlow")
-  if (!stri_startswith_fixed(flow$external.version, "R_"))
+  if (!stri_startswith_fixed(flow$external.version, "R_") | is.na(flow$external.version))
     stopf("This flow can not be converted to a mlr learner. It was not generated by the OpenML R package.")
-  if (grepl("-v2[[:punct:]]", flow$external.version)) {
+  if (stri_detect_regex(flow$external.version, "-v2[[:punct:]]")) {
     assertFile(flow$binary.path)
     return(readRDS(flow$binary.path))
   }
